--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,9 @@ body, html {
     margin: 0;
     padding: 0;
 }
+
+input {
+    font-family: 'Roboto', sans-serif;
+    background-color: #FFF;
+    color: #36454F;
+}
