--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -16,7 +16,7 @@ footer {
     padding: 1rem;
 }
 
-.footer-links a {
+.footer-links a, footer a {
     color: #FAF9F6;
     text-decoration: none;
     font-weight: 400;
