--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -32,8 +32,6 @@ header h3 {
     margin-left: 5px;
 }
 
-
-
 nav {
     margin-right: 2rem;
     
@@ -50,3 +48,9 @@ header a:hover {
     border-bottom: 1px solid #24292e;
 
 }
+
+.nav-link-active {
+    border-bottom: 2px solid #24292e;
+}
+
+
