--- a/src/Components/HikeList/HikeList.css
+++ b/src/Components/HikeList/HikeList.css
@@ -5,3 +5,33 @@
     grid-gap: 1.5rem;
     padding: 0.8rem;
 }
+
+.search-options {
+    display: flex;
+    width: 75%;
+    margin: 20px auto;
+    text-align: center;
+}
+
+.search-options input {
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: 1px solid #363636;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    box-sizing: border-box;
+}
+
+.search-options button {
+    padding: 1rem;
+    font-size: 0.75rem;
+    border: none;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    box-sizing: border-box;
+    background-color: #363636;
+    color: #fff;
+}
+
+
